@@ -30,7 +30,7 @@ static gboolean
 port_write_cb (const gchar *buf, gsize count, GError **error,
                gpointer data) 
 {
-    SCM port = SCM_PACK (GPOINTER_TO_INT (data));
+    SCM port = GPOINTER_TO_SCM (data);
     scm_c_write (port, buf, count);
     return TRUE;
 }
@@ -46,7 +46,7 @@ gdk_pixbuf_save_to_port (GdkPixbuf *pixbuf, SCM port, const char *type,
     /* ignoring options for now */
 
     res = gdk_pixbuf_save_to_callback (pixbuf, port_write_cb,
-                                       GINT_TO_POINTER (SCM_UNPACK (port)),
+                                       SCM_TO_GPOINTER (port),
                                        type, error, NULL);
     scm_remember_upto_here_1 (port);
     return res;
